--- a/medias/components/styles/scss/_colors.scss
+++ b/medias/components/styles/scss/_colors.scss
@@ -2,6 +2,7 @@
 $black: #000;
 $white: #fff;
 $greyLight: #f2f2f2;
+$greyMedium: #cccccc;
 $greyDark: #282425;
 $primary: #e82d43;
 $primaryDark: #931414;
