--- a/medias/components/styles/scss/_header.scss
+++ b/medias/components/styles/scss/_header.scss
@@ -3,6 +3,7 @@
 	background: rgba($greyLight, 0);
 	height: $headerHeight;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -24,28 +25,26 @@
 	}
 
 	.header-content{
-		position: fixed;
-		top: 0;
-		right: 0;
-		padding: 62vh $spacerS 0;
+		padding: $spacerS 0;
 
 		// OPEN CLOSE MENU MOBILE
 		.navbar-toggle{
 			background: none;
 			width: 42px;
 			height: 42px;
-			border: 0;
-			margin: 0;
-			padding: 0;
+			display: none;
 			position: absolute;
 			top: 30px;
 			right: $spacerS;
 			z-index: 110;
+			margin: 0;
+			padding: 0;
+			border: 0;
 			cursor: pointer;
 			@include easeInOut(0.2s);
 
 			.icon-bar{
-				background: $primary;
+				background: $white;
 				display: block;
 				width: 100%;
 				height: 2px;
@@ -87,38 +86,43 @@
 		}
 
 		.links-list{
-			background: url(../../images/header/bg-menu.svg) right -1px bottom no-repeat;
-			background-size: 100% auto;
-			position: absolute;
-			top: 0;
-			right: 0;
-			width: 0;
-			height: 0;
 			padding: 0;
-			opacity: 0;
+			display: flex;
+			//opacity: 0;
 			@include fontBd;
-			font-size: $fontM;
+			font-size: $fontS;
 			text-transform: uppercase;
 			text-align: right;
-			overflow: hidden;
-			pointer-events: none;
-			@include easeInOutCirc(0.3s);
 
 			li{
-				opacity: 0;
-				margin-bottom: 10px;
-				transform: translateY(-10px);
-				transition: all 0.15s ease;
-				@include stagger(0.05s);
+				padding: 0 $spacerXS;
 				
 				a{
 					display: block;
-					color: $primary;
+					position: relative;
+					color: $white;
 					transition: color 0.25s ease;
 
-					.no-touch &:hover{
-						color: $primaryDark;
+					&:before{
+						content: '';
+						background: $white;
+						width: 0;
+						height: 2px;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+						transition: width 0.25s ease;
 					}
+
+					.no-touch &:hover{
+						&:before{
+							width: 20px;
+						}
+					}
+				}
+
+				&:last-child{
+					padding-right: 0;
 				}
 			}
 		}
@@ -143,14 +147,31 @@
 			color: $primary;
 			letter-spacing: -0.025em;
 		}
+
+		.header-content{
+			.navbar-toggle{
+				.icon-bar{
+					background: $primary;
+				}
+			}
+
+			.links-list{	
+				li{					
+					a{
+						color: $primary;
+
+						&:before{
+							background: $primary;
+						}
+					}
+				}
+			}
+		}
 	}
 
 	&.open .header-content{
 		.links-list{
-			width: 33vw;
-			height: 100%;
 			opacity: 1;
-			padding: 100px $spacerS $spacerS;
 			pointer-events: initial;
 
 			li{
