--- a/medias/pages/styles/scss/_mq-home.scss
+++ b/medias/pages/styles/scss/_mq-home.scss
@@ -84,6 +84,7 @@
         & &-content{    
             .project-item{
                 width: 50%;
+                padding: 10px;
             }
         }
     }
