--- a/medias/pages/styles/scss/home.scss
+++ b/medias/pages/styles/scss/home.scss
@@ -5,11 +5,10 @@
 
 
 #intro{
+    background: $greyDark;
     width: 100vw;
     height: 100vh;
     position: relative;
-    transform: scale(1.1);
-    @include easeInOutCirc(0.6s);
 
     & &-content{
         position: absolute;
@@ -25,10 +24,12 @@
             right: 0;
             bottom: 0;
             filter: blur(10px);
-            transition: filter 0.4s ease;
+            transform: scale(1.1);
+            transition: all 0.4s ease;
 
             .loaded &{
                 filter: blur(0px);
+                transform: scale(1);
             }
         }
         
@@ -73,10 +74,23 @@
                 transform: translateY(0px);
             }
         }
-    }
-    
-    .loaded &{
-        transform: scale(1);
+
+        .scroll-arrow{
+            width: 22px;
+            height: 28px;
+            position: fixed;
+            bottom: 40px;
+            left: 50%;
+            z-index: 50;
+            margin-left: -11px;
+            opacity: 0;
+            cursor: pointer;
+        
+            .icon{
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 }
 
@@ -497,6 +511,15 @@
         bottom: 0;
         right: 0;
         transform: scaleX(-1) translateX(-20%);
+    }
+
+    .shape-bottom{
+        fill: rgba($greyLight, 0.5);
+        width: 20vh;
+        height: auto;
+        position: absolute;
+        top: 40%;
+        left: 0;
     }
 }
 
