--- a/medias/pages/styles/scss/home.scss
+++ b/medias/pages/styles/scss/home.scss
@@ -78,12 +78,11 @@
         .scroll-arrow{
             width: 22px;
             height: 28px;
-            position: fixed;
+            position: absolute;
             bottom: 40px;
             left: 50%;
             z-index: 50;
             margin-left: -11px;
-            opacity: 0;
             cursor: pointer;
         
             .icon{
@@ -108,7 +107,7 @@
         flex-wrap: wrap;
         position: relative;
         z-index: 3;
-        margin: $spacerS ($spacerXS * -1);
+        margin: $spacerS ($spacerXS * -1) 0;
 
         .project-item{
             width: 33.333%;
