--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -1,19 +1,20 @@
-html, body{
+html,
+body {
 	@include font;
-    font-size: $fontS;
+	font-size: $fontS;
 	line-height: 1.5;
-    color: $greyDark;
+	color: $greyDark;
 	-webkit-font-smoothing: antialiased;
-  	font-smoothing: antialiased;
-  	-webkit-text-size-adjust: 100%;
+	font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
 
-body{
+body {
 	width: 100%;
-	overflow-x: hidden!important;
+	overflow-x: hidden !important;
 
-	&.fixed{
+	&.fixed {
 		height: 100vh;
 		overflow: hidden;
 	}
