--- a/src/scss/components/_colors.scss
+++ b/src/scss/components/_colors.scss
@@ -3,19 +3,17 @@ $black: #000;
 $white: #fff;
 $greyLight: #f2f2f2;
 $greyMedium: #cccccc;
-$greyDark: #282425;
-$primary: #e82d43;
+$greyDark: #2E3235;
+$primary: #e82d50;
 $primaryDark: #931414;
 
 
-$colors: (
-	'black'		 : #000000,
-	'white'		 : #ffffff,
-	'greyLight'  : #f2f2f2,
-	'greyDark'	 : #282425,
-	'primary'		 : #e82d43,
-	'primaryDark'	 : #931414
-);
+$colors: ('black' : #000000,
+	'white' : #ffffff,
+	'greyLight' : #f2f2f2,
+	'greyDark' : #2E3235,
+	'primary' : #e82d50,
+	'primaryDark' : #931414);
 
 
 @function color($key) {
