--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,5 @@
 /* --- HEADER --- */
-#header{
+#header {
 	background: rgba($greyLight, 0);
 	height: $headerHeight;
 	display: flex;
@@ -15,16 +15,16 @@
 	transition: background-color 0.25s ease;
 
 	@include media-breakpoint-down(sm) {
-		height: auto;
-        display: block;
+		height: 60px;
+		display: block;
 		padding: $spacerXS;
 	}
 
-	.logo{
+	.logo {
 		@include fontLt;
 		font-size: $fontL;
 		line-height: 0.8;
-		color: $white;
+		color: $primary;
 
 		@include media-breakpoint-down(lg) {
 			font-size: $fontM;
@@ -35,13 +35,13 @@
 		}
 
 
-		strong{
+		strong {
 			@include fontBd;
 		}
 	}
 
 	// OPEN CLOSE MENU MOBILE
-	.navbar-toggle{
+	.navbar-toggle {
 		background: none;
 		width: 32px;
 		height: 42px;
@@ -60,8 +60,8 @@
 			display: block;
 		}
 
-		.icon-bar{
-			background: $white;
+		.icon-bar {
+			background: $primary;
 			display: block;
 			width: 100%;
 			height: 2px;
@@ -69,40 +69,40 @@
 			right: 0;
 			@include easeInOut(0.2s);
 
-			&:first-child{
+			&:first-child {
 				top: 9px;
 				transform-origin: left top;
 			}
 
-			&:nth-child(2){
+			&:nth-child(2) {
 				top: 18px;
 			}
 
-			&:last-child{
+			&:last-child {
 				bottom: 13px;
 				transform-origin: left bottom;
 			}
 		}
 
-		.no-touch &:hover{
-			.icon-bar{
-				&:nth-child(2){
+		.no-touch &:hover {
+			.icon-bar {
+				&:nth-child(2) {
 					width: 95%;
 				}
 
-				&:last-child{
+				&:last-child {
 					width: 90%;
 				}
 			}
 		}
 
-		&:focus{
+		&:focus {
 			outline: none;
 			border: 0;
 		}
 	}
 
-	.header-content{
+	.header-content {
 		padding: $spacerS 0;
 
 		@include media-breakpoint-down(lg) {
@@ -113,7 +113,7 @@
 			padding: 0;
 		}
 
-		.links-list{
+		.links-list {
 			padding: 0;
 			display: flex;
 			@include fontBd;
@@ -123,38 +123,38 @@
 
 			@include media-breakpoint-down(sm) {
 				display: none;
-                padding: $spacerXS 0 0;
-                text-align: left;
+				padding: $spacerXS 0 0;
+				text-align: left;
 			}
 
-			li{
+			li {
 				padding: 0 $spacerXS;
 
 				@include media-breakpoint-down(md) {
 					padding: 0 10px;
 				}
-				
+
 				@include media-breakpoint-down(sm) {
 					padding: 10px 0;
 				}
 
-				&:last-child{
+				&:last-child {
 					padding-right: 0;
 
 					@include media-breakpoint-down(sm) {
 						padding-bottom: 0;
 					}
 				}
-				
-				a{
+
+				a {
 					display: block;
 					position: relative;
-					color: $white;
+					color: $greyDark;
 					transition: color 0.25s ease;
 
-					&:before{
+					&:before {
 						content: '';
-						background: $white;
+						background: $greyDark;
 						width: 0;
 						height: 2px;
 						position: absolute;
@@ -163,8 +163,8 @@
 						transition: width 0.25s ease;
 					}
 
-					.no-touch &:hover{
-						&:before{
+					.no-touch &:hover {
+						&:before {
 							width: 20px;
 						}
 					}
@@ -174,74 +174,52 @@
 	}
 
 
-	&.forced ~ #content{
+	&.forced~#content {
 		padding-top: $spacerM;
 	}
 
 
-	&.scrolled{
+	&.scrolled {
 		background: rgba($greyLight, 1);
-		
-		.logo{
-			color: $primary;
-			letter-spacing: -0.025em;
-		}
-		
-		.navbar-toggle{
-			.icon-bar{
-				background: $primary;
-			}
-		}
-
-		.header-content{
-			.links-list{	
-				li{					
-					a{
-						color: $primary;
-
-						&:before{
-							background: $primary;
-						}
-					}
-				}
-			}
-		}
 	}
 
-	&.open{
+	&.open {
 		@include media-breakpoint-down(sm) {
-			background: $primary;
+			background: $greyLight;
 		}
 
-		&.scrolled{
+		&.scrolled {
 			@include media-breakpoint-down(sm) {
 				background: $greyLight;
 			}
 		}
-		
+
 		// OPEN CLOSE MENU MOBILE
-		.navbar-toggle{
-			.icon-bar{
-				&:first-child{
+		.navbar-toggle {
+			.icon-bar {
+				&:first-child {
 					top: 11px;
 					transform: rotate(45deg) translate(2px, -9px);
 				}
-				&:nth-child(2){
+
+				&:nth-child(2) {
 					width: 100%;
 					opacity: 0;
 				}
-				&:last-child{
+
+				&:last-child {
 					width: 100%;
 					transform: rotate(-45deg) translate(4px, 6px);
 				}
 			}
 
-			.no-touch &:hover{
-				.icon-bar{
-					&:first-child{
+			.no-touch &:hover {
+				.icon-bar {
+					&:first-child {
 						transform: rotate(45deg) translate(-1px, -9px);
 					}
-					&:last-child{
+
+					&:last-child {
 						width: 100%;
 						transform: rotate(-45deg) translate(0px, 8px);
 					}
@@ -249,8 +227,8 @@
 			}
 		}
 
-		.header-content{
-			.links-list{
+		.header-content {
+			.links-list {
 				opacity: 1;
 				pointer-events: initial;
 
@@ -258,7 +236,8 @@
 					display: block;
 				}
 			}
-		}	
+		}
 	}
 }
+
 /* --- /HEADER --- */
