--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,6 +1,6 @@
 // portfolio thumbs grid
-#portfolio{
-    #portfolio-content{
+#portfolio {
+    #portfolio-content {
         display: flex;
         flex-wrap: wrap;
         position: relative;
@@ -11,7 +11,7 @@
             margin: $spacerS -10px 0;
         }
 
-        .project-item{
+        .project-item {
             width: 33.333%;
             overflow: hidden;
             position: relative;
@@ -22,23 +22,24 @@
                 padding: 10px;
             }
 
-            .item-content{
+            .item-content {
                 width: 100%;
                 display: flex;
             }
 
-            .more{
+            .more {
                 position: absolute;
                 top: 50%;
                 left: 50%;
                 z-index: 5;
-                font-size: $fontL;
+                font-size: $fontM;
+                text-transform: uppercase;
                 color: $white;
                 transform: translate(-50%, -50%) scale(0);
                 transition: all 0.2s ease;
                 transition-delay: 0s;
 
-                .more-text{
+                .more-text {
                     opacity: 0;
                     transform: translateY(16px);
                     transition: all 0.2s ease;
@@ -46,7 +47,7 @@
                 }
             }
 
-            .item-overlay{
+            .item-overlay {
                 position: absolute;
                 top: $spacerXS;
                 right: $spacerXS;
@@ -54,7 +55,7 @@
                 height: calc(100% - #{$spacerS});
                 overflow: hidden;
 
-                img{
+                img {
                     display: block;
                     width: 100%;
                     height: 100%;
@@ -63,24 +64,20 @@
                 }
             }
 
-            .no-touch &:hover{
-                .more{
+            .no-touch &:hover {
+                .more {
                     transform: translate(-50%, -50%) scale(1);
 
-                    .more-text{
+                    .more-text {
                         opacity: 1;
                         transform: translateY(0);
                         transition-delay: 0.25s;
                     }
                 }
 
-                .item-overlay{
-                    &:before{
-                        transform: translateX(-5%);
-                    }
-
-                    img{
-                        transform: translateX(0%);
+                .item-overlay {
+                    img {
+                        transform: translateX(5%);
                     }
                 }
             }
