Ajout de nouveaux projets

--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -3,6 +3,7 @@
     #portfolio-content {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         position: relative;
         z-index: 3;
         margin: $spacerS ($spacerXS * -1) 0;
