--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -18,6 +18,7 @@
 		height: 60px;
 		display: block;
 		padding: $spacerXS;
+		transition: none;
 	}
 
 	.logo {
@@ -122,13 +123,25 @@
 			text-align: right;
 
 			@include media-breakpoint-down(sm) {
-				display: none;
+				flex-direction: column;
+				height: 0;
 				padding: $spacerXS 0 0;
 				text-align: left;
 			}
 
 			li {
 				padding: 0 $spacerXS;
+				opacity: 0;
+				transform: translateY(-10px);
+				transition: opacity 0.25s ease, transform 0.25s ease;
+				@include stagger(0.06s);
+
+				@include media-breakpoint-up(sm) {
+					.loaded &{
+						opacity: 1;
+						transform: translateY(0px);
+					}
+				}
 
 				@include media-breakpoint-down(md) {
 					padding: 0 10px;
@@ -184,6 +197,8 @@
 	}
 
 	&.open {
+		height: auto;
+
 		@include media-breakpoint-down(sm) {
 			background: $greyLight;
 		}
@@ -229,11 +244,17 @@
 
 		.header-content {
 			.links-list {
-				opacity: 1;
+				height: auto;
 				pointer-events: initial;
 
 				@include media-breakpoint-down(sm) {
 					display: block;
+				}
+
+				li{
+					@include media-breakpoint-down(sm) {
+						opacity: 1;
+					}
 				}
 			}
 		}
