--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,6 +1,6 @@
 // portfolio thumbs grid
-#portfolio {
-    #portfolio-content {
+#projects {
+    #projects-content {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
